fix: more margin to avoid overlapping symbols

--- a/app/assets/stylesheets/threads.css.scss
+++ b/app/assets/stylesheets/threads.css.scss
@@ -108,7 +108,7 @@ a.visited:hover, a.visited:active,
     & > header:before {
       content: "►";
       color: #00A1E2;
-      left: -0.5em;
+      left: -1em;
       position: absolute;
     }
   }
